Sources/TektonParsers/Generated/LaTeXParser.swift
// Generated from /Volumes/GitHubDeveloper/Packages/TektonParsers/Grammar/LaTeX.g4 by ANTLR 4.13.2
@preconcurrency import Antlr4

open class LaTeXParser: Parser {

	internal static let _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = LaTeXParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(LaTeXParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, T__0 = 1, T__1 = 2, WS = 3, THINSPACE = 4, MEDSPACE = 5, 
                 THICKSPACE = 6, QUAD = 7, QQUAD = 8, NEGTHINSPACE = 9, 
                 NEGMEDSPACE = 10, NEGTHICKSPACE = 11, CMD_LEFT = 12, CMD_RIGHT = 13, 
                 IGNORE = 14, ADD = 15, SUB = 16, MUL = 17, DIV = 18, L_PAREN = 19, 
                 R_PAREN = 20, L_BRACE = 21, R_BRACE = 22, L_BRACE_LITERAL = 23, 
                 R_BRACE_LITERAL = 24, L_BRACKET = 25, R_BRACKET = 26, BAR = 27, 
                 R_BAR = 28, L_BAR = 29, L_ANGLE = 30, R_ANGLE = 31, FUNC_LIM = 32, 
                 LIM_APPROACH_SYM = 33, FUNC_INT = 34, FUNC_SUM = 35, FUNC_PROD = 36, 
                 FUNC_EXP = 37, FUNC_LOG = 38, FUNC_LG = 39, FUNC_LN = 40, 
                 FUNC_SIN = 41, FUNC_COS = 42, FUNC_TAN = 43, FUNC_CSC = 44, 
                 FUNC_SEC = 45, FUNC_COT = 46, FUNC_ARCSIN = 47, FUNC_ARCCOS = 48, 
                 FUNC_ARCTAN = 49, FUNC_ARCCSC = 50, FUNC_ARCSEC = 51, FUNC_ARCCOT = 52, 
                 FUNC_SINH = 53, FUNC_COSH = 54, FUNC_TANH = 55, FUNC_ARSINH = 56, 
                 FUNC_ARCOSH = 57, FUNC_ARTANH = 58, L_FLOOR = 59, R_FLOOR = 60, 
                 L_CEIL = 61, R_CEIL = 62, FUNC_SQRT = 63, FUNC_OVERLINE = 64, 
                 CMD_TIMES = 65, CMD_CDOT = 66, CMD_DIV = 67, CMD_FRAC = 68, 
                 CMD_BINOM = 69, CMD_DBINOM = 70, CMD_TBINOM = 71, CMD_MATHIT = 72, 
                 UNDERSCORE = 73, CARET = 74, COLON = 75, DIFFERENTIAL = 76, 
                 LETTER = 77, DIGIT = 78, EQUAL = 79, NEQ = 80, LT = 81, 
                 LTE = 82, LTE_Q = 83, LTE_S = 84, GT = 85, GTE = 86, GTE_Q = 87, 
                 GTE_S = 88, BANG = 89, SINGLE_QUOTES = 90, SYMBOL = 91
	}

	public
	static let RULE_math = 0, RULE_relation = 1, RULE_equality = 2, RULE_expr = 3, 
            RULE_additive = 4, RULE_mp = 5, RULE_mp_nofunc = 6, RULE_unary = 7, 
            RULE_unary_nofunc = 8, RULE_postfix = 9, RULE_postfix_nofunc = 10, 
            RULE_postfix_op = 11, RULE_eval_at = 12, RULE_eval_at_sub = 13, 
            RULE_eval_at_sup = 14, RULE_exp = 15, RULE_exp_nofunc = 16, 
            RULE_comp = 17, RULE_comp_nofunc = 18, RULE_group = 19, RULE_abs_group = 20, 
            RULE_number = 21, RULE_atom = 22, RULE_bra = 23, RULE_ket = 24, 
            RULE_mathit = 25, RULE_mathit_text = 26, RULE_frac = 27, RULE_binom = 28, 
            RULE_floor = 29, RULE_ceil = 30, RULE_func_normal = 31, RULE_func = 32, 
            RULE_args = 33, RULE_limit_sub = 34, RULE_func_arg = 35, RULE_func_arg_noparens = 36, 
            RULE_subexpr = 37, RULE_supexpr = 38, RULE_subeq = 39, RULE_supeq = 40

	public
	static let ruleNames: [String] = [
		"math", "relation", "equality", "expr", "additive", "mp", "mp_nofunc", 
		"unary", "unary_nofunc", "postfix", "postfix_nofunc", "postfix_op", "eval_at", 
		"eval_at_sub", "eval_at_sup", "exp", "exp_nofunc", "comp", "comp_nofunc", 
		"group", "abs_group", "number", "atom", "bra", "ket", "mathit", "mathit_text", 
		"frac", "binom", "floor", "ceil", "func_normal", "func", "args", "limit_sub", 
		"func_arg", "func_arg_noparens", "subexpr", "supexpr", "subeq", "supeq"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "','", "'.'", nil, nil, nil, nil, "'\\quad'", "'\\qquad'", nil, "'\\negmedspace'", 
		"'\\negthickspace'", "'\\left'", "'\\right'", nil, "'+'", "'-'", "'*'", 
		"'/'", "'('", "')'", "'{'", "'}'", "'\\{'", "'\\}'", "'['", "']'", "'|'", 
		"'\\right|'", "'\\left|'", "'\\langle'", "'\\rangle'", "'\\lim'", nil, 
		nil, "'\\sum'", "'\\prod'", "'\\exp'", "'\\log'", "'\\lg'", "'\\ln'", 
		"'\\sin'", "'\\cos'", "'\\tan'", "'\\csc'", "'\\sec'", "'\\cot'", "'\\arcsin'", 
		"'\\arccos'", "'\\arctan'", "'\\arccsc'", "'\\arcsec'", "'\\arccot'", 
		"'\\sinh'", "'\\cosh'", "'\\tanh'", "'\\arsinh'", "'\\arcosh'", "'\\artanh'", 
		"'\\lfloor'", "'\\rfloor'", "'\\lceil'", "'\\rceil'", "'\\sqrt'", "'\\overline'", 
		"'\\times'", "'\\cdot'", "'\\div'", nil, "'\\binom'", "'\\dbinom'", "'\\tbinom'", 
		"'\\mathit'", "'_'", "'^'", "':'", nil, nil, nil, nil, "'\\neq'", "'<'", 
		nil, "'\\leqq'", "'\\leqslant'", "'>'", nil, "'\\geqq'", "'\\geqslant'", 
		"'!'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, nil, nil, "WS", "THINSPACE", "MEDSPACE", "THICKSPACE", "QUAD", "QQUAD", 
		"NEGTHINSPACE", "NEGMEDSPACE", "NEGTHICKSPACE", "CMD_LEFT", "CMD_RIGHT", 
		"IGNORE", "ADD", "SUB", "MUL", "DIV", "L_PAREN", "R_PAREN", "L_BRACE", 
		"R_BRACE", "L_BRACE_LITERAL", "R_BRACE_LITERAL", "L_BRACKET", "R_BRACKET", 
		"BAR", "R_BAR", "L_BAR", "L_ANGLE", "R_ANGLE", "FUNC_LIM", "LIM_APPROACH_SYM", 
		"FUNC_INT", "FUNC_SUM", "FUNC_PROD", "FUNC_EXP", "FUNC_LOG", "FUNC_LG", 
		"FUNC_LN", "FUNC_SIN", "FUNC_COS", "FUNC_TAN", "FUNC_CSC", "FUNC_SEC", 
		"FUNC_COT", "FUNC_ARCSIN", "FUNC_ARCCOS", "FUNC_ARCTAN", "FUNC_ARCCSC", 
		"FUNC_ARCSEC", "FUNC_ARCCOT", "FUNC_SINH", "FUNC_COSH", "FUNC_TANH", "FUNC_ARSINH", 
		"FUNC_ARCOSH", "FUNC_ARTANH", "L_FLOOR", "R_FLOOR", "L_CEIL", "R_CEIL", 
		"FUNC_SQRT", "FUNC_OVERLINE", "CMD_TIMES", "CMD_CDOT", "CMD_DIV", "CMD_FRAC", 
		"CMD_BINOM", "CMD_DBINOM", "CMD_TBINOM", "CMD_MATHIT", "UNDERSCORE", "CARET", 
		"COLON", "DIFFERENTIAL", "LETTER", "DIGIT", "EQUAL", "NEQ", "LT", "LTE", 
		"LTE_Q", "LTE_S", "GT", "GTE", "GTE_Q", "GTE_S", "BANG", "SINGLE_QUOTES", 
		"SYMBOL"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "LaTeX.g4" }

	override open
	func getRuleNames() -> [String] { return LaTeXParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return LaTeXParser._serializedATN }

	override open
	func getATN() -> ATN { return LaTeXParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return LaTeXParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,LaTeXParser._ATN,LaTeXParser._decisionToDFA, LaTeXParser._sharedContextCache)
	}


	public class MathContext: ParserRuleContext {
			open
			func relation() -> RelationContext? {
				return getRuleContext(RelationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LaTeXParser.RULE_math
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.enterMath(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.exitMath(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LaTeXVisitor {
			    return visitor.visitMath(self)
			}
			else if let visitor = visitor as? LaTeXBaseVisitor {
			    return visitor.visitMath(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func math() throws -> MathContext {
		var _localctx: MathContext
		_localctx = MathContext(_ctx, getState())
		try enterRule(_localctx, 0, LaTeXParser.RULE_math)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(82)
		 	try relation(0)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class RelationContext: ParserRuleContext {
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func relation() -> [RelationContext] {
				return getRuleContexts(RelationContext.self)
			}
			open
			func relation(_ i: Int) -> RelationContext? {
				return getRuleContext(RelationContext.self, i)
			}
			open
			func EQUAL() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.EQUAL.rawValue, 0)
			}
			open
			func LT() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.LT.rawValue, 0)
			}
			open
			func LTE() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.LTE.rawValue, 0)
			}
			open
			func GT() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.GT.rawValue, 0)
			}
			open
			func GTE() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.GTE.rawValue, 0)
			}
			open
			func NEQ() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.NEQ.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LaTeXParser.RULE_relation
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.enterRelation(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.exitRelation(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LaTeXVisitor {
			    return visitor.visitRelation(self)
			}
			else if let visitor = visitor as? LaTeXBaseVisitor {
			    return visitor.visitRelation(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}

	 public final  func relation( ) throws -> RelationContext   {
		return try relation(0)
	}
	@discardableResult
	private func relation(_ _p: Int) throws -> RelationContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: RelationContext
		_localctx = RelationContext(_ctx, _parentState)
		var _prevctx: RelationContext = _localctx
		let _startState: Int = 2
		try enterRecursionRule(_localctx, 2, LaTeXParser.RULE_relation, _p)
		var _la: Int = 0
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			setState(85)
			try expr()

			_ctx!.stop = try _input.LT(-1)
			setState(92)
			try _errHandler.sync(self)
			_alt = try getInterpreter().adaptivePredict(_input,0,_ctx)
			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
				if ( _alt==1 ) {
					if _parseListeners != nil {
					   try triggerExitRuleEvent()
					}
					_prevctx = _localctx
					_localctx = RelationContext(_parentctx, _parentState);
					try pushNewRecursionContext(_localctx, _startState, LaTeXParser.RULE_relation)
					setState(87)
					if (!(precpred(_ctx, 2))) {
					    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 2)"))
					}
					setState(88)
					_la = try _input.LA(1)
					if (!(((Int64((_la - 79)) & ~0x3f) == 0 && ((Int64(1) << (_la - 79)) & 207) != 0))) {
					try _errHandler.recoverInline(self)
					}
					else {
						_errHandler.reportMatch(self)
						try consume()
					}
					setState(89)
					try relation(3)

			 
				}
				setState(94)
				try _errHandler.sync(self)
				_alt = try getInterpreter().adaptivePredict(_input,0,_ctx)
			}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx;
	}

	public class EqualityContext: ParserRuleContext {
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func EQUAL() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.EQUAL.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LaTeXParser.RULE_equality
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.enterEquality(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.exitEquality(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LaTeXVisitor {
			    return visitor.visitEquality(self)
			}
			else if let visitor = visitor as? LaTeXBaseVisitor {
			    return visitor.visitEquality(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func equality() throws -> EqualityContext {
		var _localctx: EqualityContext
		_localctx = EqualityContext(_ctx, getState())
		try enterRule(_localctx, 4, LaTeXParser.RULE_equality)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(95)
		 	try expr()
		 	setState(96)
		 	try match(LaTeXParser.Tokens.EQUAL.rawValue)
		 	setState(97)
		 	try expr()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ExprContext: ParserRuleContext {
			open
			func additive() -> AdditiveContext? {
				return getRuleContext(AdditiveContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LaTeXParser.RULE_expr
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.enterExpr(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.exitExpr(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LaTeXVisitor {
			    return visitor.visitExpr(self)
			}
			else if let visitor = visitor as? LaTeXBaseVisitor {
			    return visitor.visitExpr(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func expr() throws -> ExprContext {
		var _localctx: ExprContext
		_localctx = ExprContext(_ctx, getState())
		try enterRule(_localctx, 6, LaTeXParser.RULE_expr)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(99)
		 	try additive(0)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class AdditiveContext: ParserRuleContext {
			open
			func mp() -> MpContext? {
				return getRuleContext(MpContext.self, 0)
			}
			open
			func additive() -> [AdditiveContext] {
				return getRuleContexts(AdditiveContext.self)
			}
			open
			func additive(_ i: Int) -> AdditiveContext? {
				return getRuleContext(AdditiveContext.self, i)
			}
			open
			func ADD() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.ADD.rawValue, 0)
			}
			open
			func SUB() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.SUB.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LaTeXParser.RULE_additive
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.enterAdditive(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.exitAdditive(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LaTeXVisitor {
			    return visitor.visitAdditive(self)
			}
			else if let visitor = visitor as? LaTeXBaseVisitor {
			    return visitor.visitAdditive(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}

	 public final  func additive( ) throws -> AdditiveContext   {
		return try additive(0)
	}
	@discardableResult
	private func additive(_ _p: Int) throws -> AdditiveContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: AdditiveContext
		_localctx = AdditiveContext(_ctx, _parentState)
		var _prevctx: AdditiveContext = _localctx
		let _startState: Int = 8
		try enterRecursionRule(_localctx, 8, LaTeXParser.RULE_additive, _p)
		var _la: Int = 0
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			setState(102)
			try mp(0)

			_ctx!.stop = try _input.LT(-1)
			setState(109)
			try _errHandler.sync(self)
			_alt = try getInterpreter().adaptivePredict(_input,1,_ctx)
			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
				if ( _alt==1 ) {
					if _parseListeners != nil {
					   try triggerExitRuleEvent()
					}
					_prevctx = _localctx
					_localctx = AdditiveContext(_parentctx, _parentState);
					try pushNewRecursionContext(_localctx, _startState, LaTeXParser.RULE_additive)
					setState(104)
					if (!(precpred(_ctx, 2))) {
					    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 2)"))
					}
					setState(105)
					_la = try _input.LA(1)
					if (!(_la == LaTeXParser.Tokens.ADD.rawValue || _la == LaTeXParser.Tokens.SUB.rawValue)) {
					try _errHandler.recoverInline(self)
					}
					else {
						_errHandler.reportMatch(self)
						try consume()
					}
					setState(106)
					try additive(3)

			 
				}
				setState(111)
				try _errHandler.sync(self)
				_alt = try getInterpreter().adaptivePredict(_input,1,_ctx)
			}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx;
	}


	public class MpContext: ParserRuleContext {
			open
			func unary() -> UnaryContext? {
				return getRuleContext(UnaryContext.self, 0)
			}
			open
			func mp() -> [MpContext] {
				return getRuleContexts(MpContext.self)
			}
			open
			func mp(_ i: Int) -> MpContext? {
				return getRuleContext(MpContext.self, i)
			}
			open
			func MUL() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.MUL.rawValue, 0)
			}
			open
			func CMD_TIMES() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.CMD_TIMES.rawValue, 0)
			}
			open
			func CMD_CDOT() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.CMD_CDOT.rawValue, 0)
			}
			open
			func DIV() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.DIV.rawValue, 0)
			}
			open
			func CMD_DIV() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.CMD_DIV.rawValue, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(LaTeXParser.Tokens.COLON.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return LaTeXParser.RULE_mp
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.enterMp(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? LaTeXListener {
				listener.exitMp(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? LaTeXVisitor {
			    return visitor.visitMp(self)
			}
			else if let visitor = visitor as? LaTeXBaseVisitor {
			    return visitor.visitMp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}

	 public final  func mp( ) throws -> MpContext   {
		return try mp(0)
	}
	@discardableResult
	private func mp(_ _p: Int) throws -> MpContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: MpContext
		_localctx = MpContext(_ctx, _parentState)
		var _prevctx: MpContext = _localctx
		let _startState: Int = 10
		try enterRecursionRule(_localctx, 10, LaTeXParser.RULE_mp, _p)
		var _la: Int = 0
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			setState(113)
			try unary()
